# Dialectic

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  package-lock.json  package.json  webpack.config.js
front/: index.html  package-lock.json  package.json  webpack.config.js
front/src/: App.css  UserContext.js  index.js  pretty.js
front/src/components/: Comment.css  Comment.jsx  ReplyBox.css  Toast.css
migrations/2022-08-15-150621_create_comments/: up.sql
migrations/2022-08-16-213414_add_parents/: up.sql
public/: comments.js  index.html  style.css
src/: App.css  App.jsx  main.rs  models.rs  reset.css  schema.rs
src/components/: Comment.css  Comment.jsx  ReplyBox.jsx  Toast.jsx
