[package]
name = "dialectic"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "1.4.8", features = ["mysql", "chrono"] }
rocket = "0.4.11"
serde = { version = "1.0.143", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["diesel_mysql_pool", "serve", "json"]
